[metadata]
name = Multi-Arch-sig
summary = This repository is for storing documentation and code which relates to the initiatives of OpenStack's Multi-Arch SIG
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/multi-arch-sig/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
